style.css
@keyframes slidein {
    from {
        opacity: 0%;
    }
    to {
        opacity: 100%;
    }
}

* {
    margin: 0;
    padding: 0;
    text-align: center;
    color: white;
    font-family: 'Montserrat', sans-serif;
}

html {
    background-color: rgb(255, 85, 255);
}

body {
    width: 90vw;
    min-height: 82vh;
    margin-top: 2vh;
    margin-left: 5vw;
    border-radius: 20px;
    padding-bottom: 14vh;
}

#nb_task_done {
    font-family: 'Dosis', sans-serif;
}

.btn_manage {
    position: fixed;
    bottom: 2vh;
    border-radius: 20px;
    height: 10vh;
    width: 10vh;
}

#btn_task_list {
    left: 2vw;

    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    background-color: rgb(161, 0, 161);
    background-image: url(img/parameters.png);
    background-size: 80%;
    background-repeat: no-repeat;
    background-position: center;
}

#btn_new_task {
    right: 2vw;

    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    background-color: rgb(161, 0, 161);
    background-image: url(img/add.png);
    background-size: 80%;
    background-repeat: no-repeat;
    background-position: center;
}

.task {
    list-style: none;
    display: flex;
    padding: 15px;
    background-color: rgb(161, 0, 161);
    margin-top: 10px;
}

.task>p {
    width: 80vw;
    margin: auto;
}

.task>button {
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;


    width: 10vw;
    height: 10vw;
    border-radius: 5vw;
    background-color: rgb(0, 186, 0);
}

.task_manager {
    position: relative;
    list-style: none;
    display: flex;
    border-radius: 20px;
    height: 15vh;
    background-color: rgb(161, 0, 161);
    margin-top: 10px;
    padding-right: 4px;
}

.btn_erase_task {
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    position: absolute;
    height: 30px;
    width: 30px;
    left: -10px;
    top: -10px;
    border-radius: 15px;
    background-color: rgb(255, 4, 0);
}

.task_manager>p {
    flex: 2;
    margin: auto;
}

.task_manager>div {
    margin: auto;
    font-size: x-small;
    flex: 1;
    display: flex;
    flex-direction: column;
    margin-top: auto;
    height: 80%;
}

.task_manager>div>* {
    margin: auto;
    width: 100%;
}

.data_task {
    font-size: small;
}

.value_modifier {
    display: flex;
    flex-direction: row;
}

.value_modifier>button {
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    border: 1px solid black;
    background-color: rgb(255, 85, 255);

    flex: auto;
    height: 150%;
}

#new_task {
    display: flex;
    flex-direction: column;
    display: none;
}

#new_task_title {
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    background-color: rgb(161, 0, 161);
    line-height: 10vh;
    margin-top: 3vh;
}

#new_task_title::placeholder {
    color: rgba(255, 255, 255, 0.685);
}

.new_task_parameter {
    background-color: rgb(161, 0, 161);
    display: flex;
    flex-direction: row;
    margin-top: 10vh;
    padding-top: 4vh;
    padding-bottom: 4vh;
}

.new_task_parameter>p {
    flex: 1;
    margin: auto;
}
.new_task_parameter>div {
    flex: 1;
}

.new_task_data {
    display: flex;
    flex-direction: column;
}

.new_task_data>div {
    display: flex;
    flex-direction: row;
}

.new_task_data>div>button {
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    border: 1px solid black;
    background-color: rgb(255, 85, 255);

    height: 5vh;
    flex: auto;
}

#new_task_validation {
    box-shadow: 0px 0px 0px transparent;
    border: 0px solid transparent;
    text-shadow: 0px 0px 0px transparent;

    background-color: rgb(0, 186, 0);
    width: 50vw;
    height: 5vh;
    margin: auto;
    margin-top: 10vh;
}

